--- a/lana-utan-ranta/index.html
+++ b/lana-utan-ranta/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><head>
+<!DOCTYPE html><head><head>
  
   
  	 
@@ -553,7 +553,7 @@ window.addEventListener(
 	
 	<tr id="div0" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Binly lån utan ränta</a><br>Fast ränta 39,5 %</span><br><button class="btn-green lb"><a href="https://binly.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">En kredit på 9 500 kr till 42,50 % ränta med en återbetalningstid på tio månader (med tio återbetalningar om 1 910 kr, 1 576 kr, 1 536 kr, 1 496 kr, 1 456 kr, 1 415 kr, 1 375 kr, 1 335 kr, 1 294 kr samt 1 254 kr) och 1 205 kr i uppläggningsavgift, 1 155 kr i Lägst att betala-belopp samt 600 kr i aviavgifter ger en effektiv ränta på totalt 198,86 %. Det totala beloppet att återbetala är 14 648 kr.</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/binly.webp" width="200" height="100" alt=""> </td></tr>                   
+	 <span class="lender-title">Binly lån utan ränta</a><br>Fast ränta 39,5 %</span><br><button class="btn-green lb"><a href="https://binly.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">En kredit på 9 500 kr till 42,50 % ränta med en återbetalningstid på tio månader (med tio återbetalningar om 1 910 kr, 1 576 kr, 1 536 kr, 1 496 kr, 1 456 kr, 1 415 kr, 1 375 kr, 1 335 kr, 1 294 kr samt 1 254 kr) och 1 205 kr i uppläggningsavgift, 1 155 kr i Lägst att betala-belopp samt 600 kr i aviavgifter ger en effektiv ränta på totalt 198,86 %. Det totala beloppet att återbetala är 14 648 kr.</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/media/binly.webp" width="200" height="100" alt=""> </td></tr>                   
 </table>
 <div id="month">[april 2025]</div>
 		 
@@ -989,7 +989,7 @@ window.addEventListener(
  
 <p><a href="https://lastoffer.net/kontakta-oss/">Kontakt</a></p> 
  
- <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/tps://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
+ <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
 </div>
 	
 		<div class="ftbox"><h5>Utgivare</h5>
@@ -1007,7 +1007,7 @@ window.addEventListener(
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/tps://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
+ 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
 </div>
 		
 	</div></div>
