--- a/lanekoll/index.html
+++ b/lanekoll/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><head>
+<!DOCTYPE html><head><head>
  
   
  	 
@@ -153,7 +153,7 @@
 <div class="cell left"> 
 <div class="grey"> 
 <div class="button-group"><div class="gem"></div>
-<span class='data-value' itemprop="logo"><img decoding="async" alt="Lånekoll" class="loggy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lanekoll.webp"></span><br>
+<span class='data-value' itemprop="logo"><img decoding="async" alt="Lånekoll" class="loggy" src="https://lastoffer.net/adbilder/lanekoll.webp"></span><br>
  	<a class="large red button" href="https://www.lanekoll.se/" rel="nofollow noopener" target="_blank"><span class='data-value' itemprop="name">Lånekoll</span> &#128279;</a>
  	 <div class="tump">
  
@@ -205,28 +205,28 @@
 <div class="cell">
 <h3>Lånekoll Trustpilot</h3>
 <p>Omdömen: 1339</p>Trustpilot betyg:  4,9 av 5 (98 %)</p>
-<div class="trust"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/trustpilotbg.webp" height="50px" width="250px" alt="Trustpilot ger Lånekoll betyg 4.9 av 5" title="Trustpilot ger Lånekoll betyg 4.9 av 5"></div> 
+<div class="trust"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="50px" width="250px" alt="Trustpilot ger Lånekoll betyg 4.9 av 5" title="Trustpilot ger Lånekoll betyg 4.9 av 5"></div> 
 </div>
 
 <div class="cell rew">
  <p>2023-07-17</p>
 	 <h4>Proffsigt bemötande!</h4>
 	 <p>Snabba, god tillgänglighet, lyssnade verkligen på våra behov och frågor och gav oss ett bra bemötande från start till mål!</p>	
-	<div class="betyg_1"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 4" title="Kund ger Lånekoll betyg 4 av 5"></div>
+	<div class="betyg_1"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 4" title="Kund ger Lånekoll betyg 4 av 5"></div>
  	</div>
 
 <div class="cell rew">
 	<p>2023-06-16</p>
 		<h4>Väldigt professionella och hjälpsamma</h4>
 		<p>Väldig hjälpsamma och professionella.Min handläggare på lånekoll hjälpte mig hela vägen med bankontakt till beviljat och utbetald bolån.</p>	
-	<div class="betyg_2"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 5" title="Kund ger Lånekoll betyg 5 av 5"></div>
+	<div class="betyg_2"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 5" title="Kund ger Lånekoll betyg 5 av 5"></div>
  </div>
 
 <div class="cell rew">
  <p>2023-07-04</p>
  <h4>Extrem vänlig och professionell</h4>
 	 <p>Extrem vänlig, behjälplig och professionell handläggare. Stefan som hjälpte mig var super pedagogisk och alltid tillgänglig. Stor eloge till Stefan!</p>	
-	<div class="betyg_3"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 5" title="Kund ger Lånekoll betyg 5 av 5"></div>
+	<div class="betyg_3"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 5" title="Kund ger Lånekoll betyg 5 av 5"></div>
  </div>
  
 <style>
@@ -961,7 +961,7 @@ Narvavägen 12<br />
  
 <p><a href="https://lastoffer.net/kontakta-oss/">Kontakt</a></p> 
  
- <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/tps://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
+ <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
 </div>
 	
 		<div class="ftbox"><h5>Utgivare</h5>
@@ -979,7 +979,7 @@ Narvavägen 12<br />
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/tps://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
+ 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
 </div>
 		
 	</div></div>
