--- a/lan-som-alla-ar-nojda-med/index.html
+++ b/lan-som-alla-ar-nojda-med/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><head>
+<!DOCTYPE html><head><head>
  
   
  	 
@@ -507,7 +507,7 @@ window.addEventListener(
 	</ol></div></div></div><section><div class="lan vinnare"><h2><div class="unskew">Topplista lån som alla är nöjda med</div></h2></div><div class="cell rekommenderade"><p>Topplista för rekommenderade och utvalda  lån som alla är nöjda med  2024. För hjälp att få okomplicerat  lån som alla är nöjda med med hög servicenivå tipsar vi om följande: <ol class="reko"><li><a href=https://lastoffer.net/northmill/>Northmill</a><span class="separator"> – </span>Banken som gör det bättre<span class="separator"> – </span>Före kl. 13:30 samma dag</li><li><a href=https://lastoffer.net/ferratum/>Ferratum</a><span class="separator"> – </span>Mer än pengar till alla<span class="separator"> – </span>Direktutbetalning till de fyra storbankerna.</li><li><a href=https://lastoffer.net/lanekoll/>Lånekoll</a><span class="separator"> – </span>Förbättra dina lån<span class="separator"> – </span>Direktutbetalning – du slipper vänta</li><li><a href=https://lastoffer.net/gfmoney/>GFMoney</a><span class="separator"> – </span>Flexibel kontokredit<span class="separator"> – </span>Fem minuter med konto i storbank.</li><li><a href=https://lastoffer.net/viaconto/>Viaconto</a><span class="separator"> – </span>Introducerar nya lånemöjligheter<span class="separator"> – </span>Vardagar samma dag.</li></ol></div><div class="lan">
 <h2><div class="unskew">Erbjudande:  lån som alla är nöjda med</div></h2>
 </div><div class="row"> <span class="tooltip" data-tooltip="Annonsörer på den här webbplatsen följer konsumentverkets rekommendationer för annonsering om lån och krediter.">?</span>
-<div class="list-item cell block"><div class="pophd"> Northmill</div><span class="popl">populärt val</span><div class="img-wrapper"><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/northmill.webp" width="300" height="auto" alt="Northmill"></div></a><div class="table-container" style="min-width: fit-content;"><table class="table-container__table"><tbody>
+<div class="list-item cell block"><div class="pophd"> Northmill</div><span class="popl">populärt val</span><div class="img-wrapper"><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/northmill.webp" width="300" height="auto" alt="Northmill"></div></a><div class="table-container" style="min-width: fit-content;"><table class="table-container__table"><tbody>
  <tr><th>Belopp</th> <td>1 000 - 50 000 kr</td></tr>
  <tr><th>Ränta</th>
 
@@ -533,8 +533,8 @@ button.bleu {
 </style>
 <div style="display:none"  id="showall" class="cell block">
 <ul class="showall">
-<li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/ferratum.webp" width="300" height="auto" alt="Ferratum"><br> <span class="lender-title"><a href="https://lastoffer.net/ferratum/"  >Ferratum lån som alla är nöjda med</a>  - fast ränta 40,5 %</span><br><button class="btn-green lb"><a href="https://www.ferratum.se/" rel="sponsored" >Till ansökan</a></button><br>Utnyttjad kredit om 25 000 kr i 12 månader, totalt belopp att återbetala 30 890 kr (snitt 2 574 kr per månad). Effektiv årsränta: 53  %. Kontokredit med variabel nominell årsränta på 44 %. Övriga avgifter: Uppläggningsavgift 0 kr. </li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lanekoll.webp" width="300" height="auto" alt="Lånekoll"><br> <span class="lender-title"><a href="https://lastoffer.net/lanekoll/"  >Lånekoll lån som alla är nöjda med</a> - från 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br>Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/gfmoney.webp" width="300" height="auto" alt="GFMoney"><br> <span class="lender-title"><a href="https://lastoffer.net/gfmoney/"  >GFMoney lån som alla är nöjda med</a>  - fast ränta 39,8 %</span><br><button class="btn-green lb"><a href="https://gfmoney.se/" rel="sponsored" >Till ansökan</a></button><br>Lånexempel (2024-01-16):
-Utnyttjad kredit om 15 000 kr i 12 månader, totalt att återbetala 19 725 kr (snitt 1 644 kr per månad). Effektiv årsränta: 71.04%. Kontokredit med rörlig nominell årsränta på 44.00%. Avgifter: Uppläggningsavgift 280 kr. Uttagsavgift 95 kr. Månadsavgift: 45 kr. Lånexemplet förutsätter ett uttag med avgift, en uppläggningsavgift samt 12 månadsavgifter.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/viaconto.webp" width="300" height="auto" alt="Viaconto"><br> <span class="lender-title"><a href="https://lastoffer.net/viaconto/"  >Viaconto lån som alla är nöjda med</a>  - fast ränta 39,5 %</span><br><button class="btn-green lb"><a href="https://www.viaconto.se/" rel="sponsored" >Till ansökan</a></button><br>Ett lån på 6 000 kronor till 39.5 procents bunden ränta med en
+<li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/ferratum.webp" width="300" height="auto" alt="Ferratum"><br> <span class="lender-title"><a href="https://lastoffer.net/ferratum/"  >Ferratum lån som alla är nöjda med</a>  - fast ränta 40,5 %</span><br><button class="btn-green lb"><a href="https://www.ferratum.se/" rel="sponsored" >Till ansökan</a></button><br>Utnyttjad kredit om 25 000 kr i 12 månader, totalt belopp att återbetala 30 890 kr (snitt 2 574 kr per månad). Effektiv årsränta: 53  %. Kontokredit med variabel nominell årsränta på 44 %. Övriga avgifter: Uppläggningsavgift 0 kr. </li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/lanekoll.webp" width="300" height="auto" alt="Lånekoll"><br> <span class="lender-title"><a href="https://lastoffer.net/lanekoll/"  >Lånekoll lån som alla är nöjda med</a> - från 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br>Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/gfmoney.webp" width="300" height="auto" alt="GFMoney"><br> <span class="lender-title"><a href="https://lastoffer.net/gfmoney/"  >GFMoney lån som alla är nöjda med</a>  - fast ränta 39,8 %</span><br><button class="btn-green lb"><a href="https://gfmoney.se/" rel="sponsored" >Till ansökan</a></button><br>Lånexempel (2024-01-16):
+Utnyttjad kredit om 15 000 kr i 12 månader, totalt att återbetala 19 725 kr (snitt 1 644 kr per månad). Effektiv årsränta: 71.04%. Kontokredit med rörlig nominell årsränta på 44.00%. Avgifter: Uppläggningsavgift 280 kr. Uttagsavgift 95 kr. Månadsavgift: 45 kr. Lånexemplet förutsätter ett uttag med avgift, en uppläggningsavgift samt 12 månadsavgifter.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/viaconto.webp" width="300" height="auto" alt="Viaconto"><br> <span class="lender-title"><a href="https://lastoffer.net/viaconto/"  >Viaconto lån som alla är nöjda med</a>  - fast ränta 39,5 %</span><br><button class="btn-green lb"><a href="https://www.viaconto.se/" rel="sponsored" >Till ansökan</a></button><br>Ett lån på 6 000 kronor till 39.5 procents bunden ränta med en
 återbetalningstid på en månad, med ett betalnig om 196 kronor i ränta och
 380 kronor i uppläggningsavgift samt 45 kronor i aviavgift ger en
 effektiv ränta på totalt 261.1 procent. Totalt att återbetala blir 6621 
@@ -595,7 +595,7 @@ kronor.</li>
 	
 	<tr id="div0" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Northmill lån som alla är nöjda med</a><br>Ränta 7,9 - 25,9 %</span><br><button class="btn-green lb"><a href="https://northmill.com/se/kontokredit/affiliate" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Vid kredit om 50 000 kr till 16,9 % årsränta under fem år med 60 återbetalningar, en uttagsavgift om 195 kr samt en administrativ avgift om 19 kr per månad blir totalt belopp att återbetala 75 827 kr. Kreditbeloppet, antalet återbetalningar, uttagsavgiften och räntan för kundens lån kan avvika från ovan angivna exempel. Det totala belopp som kunden ska betala beror på hur kontokrediten utnyttjas.</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/northmill.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/ferratum/>Ferratum</a> <p><button class="mminfo" id="bt1" onclick="myFunction('div1')">Läs mer</button></p></th>
+	 <span class="lender-title">Northmill lån som alla är nöjda med</a><br>Ränta 7,9 - 25,9 %</span><br><button class="btn-green lb"><a href="https://northmill.com/se/kontokredit/affiliate" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Vid kredit om 50 000 kr till 16,9 % årsränta under fem år med 60 återbetalningar, en uttagsavgift om 195 kr samt en administrativ avgift om 19 kr per månad blir totalt belopp att återbetala 75 827 kr. Kreditbeloppet, antalet återbetalningar, uttagsavgiften och räntan för kundens lån kan avvika från ovan angivna exempel. Det totala belopp som kunden ska betala beror på hur kontokrediten utnyttjas.</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/adbilder/northmill.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/ferratum/>Ferratum</a> <p><button class="mminfo" id="bt1" onclick="myFunction('div1')">Läs mer</button></p></th>
 <td>Högst beviljandegrad</td>
 <td>3.8</td>
 <td data-sort-value='1 000'>1 000 kr</td>
@@ -612,7 +612,7 @@ kronor.</li>
 	
 	<tr id="div1" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Ferratum lån som alla är nöjda med</a><br>Fast ränta 40,5 %</span><br><button class="btn-green lb"><a href="https://www.ferratum.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Utnyttjad kredit om 25 000 kr i 12 månader, totalt belopp att återbetala 30 890 kr (snitt 2 574 kr per månad). Effektiv årsränta: 53  %. Kontokredit med variabel nominell årsränta på 44 %. Övriga avgifter: Uppläggningsavgift 0 kr. </td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/ferratum.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lanekoll/>Lånekoll</a> <p><button class="mminfo" id="bt2" onclick="myFunction('div2')">Läs mer</button></p></th>
+	 <span class="lender-title">Ferratum lån som alla är nöjda med</a><br>Fast ränta 40,5 %</span><br><button class="btn-green lb"><a href="https://www.ferratum.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Utnyttjad kredit om 25 000 kr i 12 månader, totalt belopp att återbetala 30 890 kr (snitt 2 574 kr per månad). Effektiv årsränta: 53  %. Kontokredit med variabel nominell årsränta på 44 %. Övriga avgifter: Uppläggningsavgift 0 kr. </td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/ferratum.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lanekoll/>Lånekoll</a> <p><button class="mminfo" id="bt2" onclick="myFunction('div2')">Läs mer</button></p></th>
 <td>Direktutbetalning</td>
 <td>4.9</td>
 <td data-sort-value='10 000'>10 000 kr</td>
@@ -629,7 +629,7 @@ kronor.</li>
 	
 	<tr id="div2" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Lånekoll lån som alla är nöjda med</a><br>Ränta 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lanekoll.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/gfmoney/>GFMoney</a> <p><button class="mminfo" id="bt3" onclick="myFunction('div3')">Läs mer</button></p></th>
+	 <span class="lender-title">Lånekoll lån som alla är nöjda med</a><br>Ränta 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/lanekoll.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/gfmoney/>GFMoney</a> <p><button class="mminfo" id="bt3" onclick="myFunction('div3')">Läs mer</button></p></th>
 <td>Alltid tillgängligt</td>
 <td>-</td>
 <td data-sort-value='1 000'>1 000 kr</td>
@@ -647,7 +647,7 @@ kronor.</li>
 	<tr id="div3" style="display:none;"><td colspan="2"> 
 	 	
 	 <span class="lender-title">GFMoney lån som alla är nöjda med</a><br>Fast ränta 39,8 %</span><br><button class="btn-green lb"><a href="https://gfmoney.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Lånexempel (2024-01-16):
-Utnyttjad kredit om 15 000 kr i 12 månader, totalt att återbetala 19 725 kr (snitt 1 644 kr per månad). Effektiv årsränta: 71.04%. Kontokredit med rörlig nominell årsränta på 44.00%. Avgifter: Uppläggningsavgift 280 kr. Uttagsavgift 95 kr. Månadsavgift: 45 kr. Lånexemplet förutsätter ett uttag med avgift, en uppläggningsavgift samt 12 månadsavgifter.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/gfmoney.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/viaconto/>Viaconto</a> <p><button class="mminfo" id="bt4" onclick="myFunction('div4')">Läs mer</button></p></th>
+Utnyttjad kredit om 15 000 kr i 12 månader, totalt att återbetala 19 725 kr (snitt 1 644 kr per månad). Effektiv årsränta: 71.04%. Kontokredit med rörlig nominell årsränta på 44.00%. Avgifter: Uppläggningsavgift 280 kr. Uttagsavgift 95 kr. Månadsavgift: 45 kr. Lånexemplet förutsätter ett uttag med avgift, en uppläggningsavgift samt 12 månadsavgifter.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/gfmoney.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/viaconto/>Viaconto</a> <p><button class="mminfo" id="bt4" onclick="myFunction('div4')">Läs mer</button></p></th>
 <td>Pengar samma dag</td>
 <td>3.8</td>
 <td data-sort-value='1 000'>1 000 kr</td>
@@ -668,7 +668,7 @@ Utnyttjad kredit om 15 000 kr i 12 månader, totalt att återbetala 19 725 kr (s
 återbetalningstid på en månad, med ett betalnig om 196 kronor i ränta och
 380 kronor i uppläggningsavgift samt 45 kronor i aviavgift ger en
 effektiv ränta på totalt 261.1 procent. Totalt att återbetala blir 6621 
-kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/viaconto.webp" width="200" height="100" alt=""> </td></tr>                   
+kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/viaconto.webp" width="200" height="100" alt=""> </td></tr>                   
 </table>
 <div id="month">[april 2025]</div>
 		 
@@ -998,7 +998,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
  
 <p><a href="https://lastoffer.net/kontakta-oss/">Kontakt</a></p> 
  
- <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/tps://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
+ <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
 </div>
 	
 		<div class="ftbox"><h5>Utgivare</h5>
@@ -1016,7 +1016,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/tps://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
+ 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
 </div>
 		
 	</div></div>
