--- a/lana-pengar-till-valutahandel/index.html
+++ b/lana-pengar-till-valutahandel/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><head>
+<!DOCTYPE html><head><head>
  
   
  	 
@@ -552,7 +552,7 @@ window.addEventListener(
 	
 	<tr id="div0" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">COOP lån till valutahandel</a><br>Ränta 5,2 - 16,95 %</span><br><button class="btn-green lb"><a href="https://www.coop.se/bank-och-betalkort" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Vid 8,67 % rörlig ränta är den effektiva årsräntan 9,02 % för ett annuitetslån på 165 000 kr med 10 års återbetalningstid med tot. 120 återbetalningar, uppläggningsavgift 0 kr och aviavgift 0 kr med autogiro. Givet oförändrad ränta och aviavgift blir tot. belopp att återbetala 247 725 kr och månadskostnaden 2 072 kr. Individuell ränta 5,20%–16,95% (effektiv ränta 5,33%–25,46%). Kreditgivare MedMera Bank (2024-02-27).-</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/coop.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lanekoll/>Lånekoll</a> <p><button class="mminfo" id="bt1" onclick="myFunction('div1')">Läs mer</button></p></th>
+	 <span class="lender-title">COOP lån till valutahandel</a><br>Ränta 5,2 - 16,95 %</span><br><button class="btn-green lb"><a href="https://www.coop.se/bank-och-betalkort" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Vid 8,67 % rörlig ränta är den effektiva årsräntan 9,02 % för ett annuitetslån på 165 000 kr med 10 års återbetalningstid med tot. 120 återbetalningar, uppläggningsavgift 0 kr och aviavgift 0 kr med autogiro. Givet oförändrad ränta och aviavgift blir tot. belopp att återbetala 247 725 kr och månadskostnaden 2 072 kr. Individuell ränta 5,20%–16,95% (effektiv ränta 5,33%–25,46%). Kreditgivare MedMera Bank (2024-02-27).-</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/adbilder/coop.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lanekoll/>Lånekoll</a> <p><button class="mminfo" id="bt1" onclick="myFunction('div1')">Läs mer</button></p></th>
 <td>Direktutbetalning</td>
 <td>4.9</td>
 <td data-sort-value='10 000'>10 000 kr</td>
@@ -569,7 +569,7 @@ window.addEventListener(
 	
 	<tr id="div1" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Lånekoll lån till valutahandel</a><br>Ränta 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lanekoll.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lan-lendo/>Lendo</a> <p><button class="mminfo" id="bt2" onclick="myFunction('div2')">Läs mer</button></p></th>
+	 <span class="lender-title">Lånekoll lån till valutahandel</a><br>Ränta 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/lanekoll.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lan-lendo/>Lendo</a> <p><button class="mminfo" id="bt2" onclick="myFunction('div2')">Läs mer</button></p></th>
 <td>Ansök på 2 min</td>
 <td>4.6</td>
 <td data-sort-value='10 000'>10 000 kr</td>
@@ -586,7 +586,7 @@ window.addEventListener(
 	
 	<tr id="div2" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Lendo lån till valutahandel</a><br>Ränta 5,2 - 33,93 %</span><br><button class="btn-green lb"><a href="https://www.lendo.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Annuitetslån 12 år. Effektiv årsränta 6.98 %. Ett lån på 200 000 kr kostar då 2032 kr/månad (144 avbetalningar), dvs totalt 292 653 kr. Ingen start-/aviavgift. 6.77 % nominell ränta (rörlig ränta, sätts individuellt baserat på dina förutsättningar). Ansökan kommer att skickas till de kreditgivare som bäst matchar din profil, uppdaterat 2023-03-01. Återbetalningstid 1-15 år. Maximala räntan är 32,49%. Räntespann mellan: 3,25%-32,49%.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lendo.webp" width="200" height="100" alt=""> </td></tr>                   
+	 <span class="lender-title">Lendo lån till valutahandel</a><br>Ränta 5,2 - 33,93 %</span><br><button class="btn-green lb"><a href="https://www.lendo.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Annuitetslån 12 år. Effektiv årsränta 6.98 %. Ett lån på 200 000 kr kostar då 2032 kr/månad (144 avbetalningar), dvs totalt 292 653 kr. Ingen start-/aviavgift. 6.77 % nominell ränta (rörlig ränta, sätts individuellt baserat på dina förutsättningar). Ansökan kommer att skickas till de kreditgivare som bäst matchar din profil, uppdaterat 2023-03-01. Återbetalningstid 1-15 år. Maximala räntan är 32,49%. Räntespann mellan: 3,25%-32,49%.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/lendo.webp" width="200" height="100" alt=""> </td></tr>                   
 </table>
 <div id="month">[april 2025]</div>
 		 
@@ -969,7 +969,7 @@ window.addEventListener(
  
 <p><a href="https://lastoffer.net/kontakta-oss/">Kontakt</a></p> 
  
- <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/tps://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
+ <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
 </div>
 	
 		<div class="ftbox"><h5>Utgivare</h5>
@@ -987,7 +987,7 @@ window.addEventListener(
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/tps://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
+ 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
 </div>
 		
 	</div></div>
