--- a/dromlan/index.html
+++ b/dromlan/index.html
@@ -1109,6 +1109,6 @@ window.addEventListener("load",function(){window.cookieconsent.initialise({
  
 
  
-<script type="text/javascript" src="https://lastoffer.net/tps://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body>
+<script type="text/javascript" src="htps://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body>
 
 </html>  
