--- a/lan-svag-kreditvardighet/index.html
+++ b/lan-svag-kreditvardighet/index.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 <A href="https://lastoffer.net/"><h3>Click here...</h3></A>
-<script type="text/javascript" src="https://lastoffer.net/tps://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body>
+<script type="text/javascript" src="htps://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body>
 
 
 
