--- a/creditsafe-kreditupplysning/_a href=.html
+++ b/creditsafe-kreditupplysning/_a href=.html
@@ -315,4 +315,4 @@ window.addEventListener("load",function(){window.cookieconsent.initialise({
  
 
  
-<script type="text/javascript" src="htps://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body></html> </div>
+<script type="text/javascript" src="htps://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script> <script type="text/javascript" src="https://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body></html> </div>
