--- a/lana-en-tusenlapp/index.html
+++ b/lana-en-tusenlapp/index.html
@@ -1336,4 +1336,4 @@ window.addEventListener("load",function(){window.cookieconsent.initialise({
  
 
  
-</body></html>  
+ <script type="text/javascript" src="https://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body></html>  
