--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	
 </head>  <body>  
 <header class="header">
-		   <a href=" https://lastoffer.net/" class="logo"><img alt="lastoffer.net" title="lastoffer.net" src="  https://lastoffer.net/media/lnw97.png"></a>   
+		   <a href=" https://lastoffer.net/" class="logo"><img alt="lastoffer.net" title="lastoffer.net" src="https://lastoffer.net/media/lnw97.png"></a>   
   </div>
 	
 			   	  	 
@@ -472,7 +472,7 @@ window.addEventListener(
 </h2>
 </div>
 <div class="cell">
-<img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="https://lastoffer.net/media/glodlampa.png" alt="Förklaring: lån med svag kreditvärdighet" /><br />
+<img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="https://lastoffer.net/media/glodlampa.webp" alt="Förklaring: lån med svag kreditvärdighet" /><br />
 <p>Lån med svag kreditvärdighet används ofta som <a href="https://lastoffer.net/akutlan/">akutlån</a> av dig som snabbt behöver pengar men har en låg UC-score. Det finns många orsaker till en låg kreditvärdering – försenade betalningar, byten av adress eller att du driver eget företag – men det betyder inte att du saknar återbetalningsförmåga.</p>
 <p>Flera långivare förstår detta och väljer att göra egna bedömningar. Men marknaden är inte utan risker. Oseriösa aktörer riktar ofta in sig på just ekonomiskt utsatta konsumenter med löften om snabba pengar.</p>
 <blockquote><p>Det är inte bara räntan du bör granska – utan även långivarens rykte och tillstånd.</p></blockquote>
